--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "http-proxy": "^1.16.2",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
