--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "angular-route": "^1.6.4",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "http-proxy": "^1.16.2",
-    "request": "^2.81.0"
+    "mongoose": "^4.9.8",
+    "morgan": "^1.8.1",
+    "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
