--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "capstone-project",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js localhost 3000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Darin Dieckhoff",
   "license": "ISC",
@@ -19,6 +19,12 @@
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "eslint": "^3.19.0",
+    "mocha": "^3.3.0",
+    "mongoose-seeder": "^1.2.1",
+    "nodemon": "^1.11.0",
+    "webpack": "^2.5.1"
   }
 }
