--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone-project",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "nodemon ./src/index.js localhost 3000",
     "test": "mocha"
@@ -24,7 +24,6 @@
     "eslint": "^3.19.0",
     "mocha": "^3.3.0",
     "mongoose-seeder": "^1.2.1",
-    "nodemon": "^1.11.0",
-    "webpack": "^2.5.1"
+    "nodemon": "^1.11.0"
   }
 }
