--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon ./src/index.js localhost 3000",
     "test": "mocha"
   },
+  "engines": {
+    "node":"6.9.2"
+  },
   "author": "Darin Dieckhoff",
   "license": "ISC",
   "dependencies": {
